Bug 1542521 - Join blocks with empty elements in between r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D67076